# django-mpesapy

./: .coveragerc  .flake8  Dockerfile  README.rst  docker-compose.yml  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
doc/: Makefile
doc/source/: conf.py  getting_started.rst  index.rst  modules.rst
example_project/mysite/: settings.py  urls.py
mpesapy/: __init__.py  admin.py  apps.py  fetch.py  middleware.py  models.py  signals.py  tasks.py  urls.py
mpesapy/codes/: online_checkout.py
mpesapy/migrations/: 0001_initial.py  0002_auto_20170209_0837.py  0003_auto_20170214_0845.py  0004_auto_20170220_0829.py  0005_requestlogs.py  0006_auto_20200106_0934.py
mpesapy/mpesa/: c2b.py  checkout.py  conversion.py  mpull.py  utils.py  xml2dict.py
mpesapy/mpesa/wsdl/: C2BPaymentConfirmationRequest.xml  C2BPaymentConfirmationResult.xml  C2BPaymentValidationRequest.xml  C2BPaymentValidationResult.xml  CBPInterface_C2BPaymentValidationAndConfirmation.wsdl  __init__.py  registerURL_kenya.xml  registerURL_kenya_result.xml
mpesapy/tests/: model_tests.py  test.py  test_models.py  test_views.py
mpesapy/v1/: urls.py  views.py
mpesapy/v2/: urls.py  views.py
tests/: test.py  test_models.py  test_settings.py  test_views.py  urls.py
