[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html
[bdist_wheel]
universal=1

[metadata]
name = django-mpesapy
version = 1.1.3
description = Django app consuming M-Pesa APIs
long_description = file: README.rst
url = http://http://pythonhosted.org/django-mpesapy/
download_url = https://github.com/wanderijames/django-mpesapy
author = James Wanderi
author_email = wanderikinyanjui@gmail.com
keywords =
    django
    mpesa
    mpesapy
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
install_requires =
    xmltodict
    suds-py3
